Added window resize support, g2d transposing and scaling